# MolBridge-NonCovalent-Atlas

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROJECT_SUMMARY.txt  Procfile  README.md  SECURITY.md  deploy.sh  pyproject.toml  requirements-prod.txt  requirements.txt  server.py  simple_viewer_test.py  temp_viewer_method.py  test_server_fixes.sh
.github/workflows/: ci.yml  nightly_perf.yml
.streamlit/: config.toml
app/ui/: style_loader.py
benchmarks/: benchmark_batch.py
docs/: INDEX.md  OPTIMIZATION_BACKLOG.md  REFERENCE_MIGRATION.md  REQUIREMENTS_LOCK.md  SCIENTIFIC_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION.md  TODO_OPTIMIZATION.md  WORKFLOW_PIPELINE.md  curated_golden_list.txt
docs/architecture/: README.md  adaptive_thresholds.md  api_and_ui_integration.md  caching_and_persistence.md  concurrency_and_parallelism.md  data_model.md  deployment_and_env.md  detectors.md  extensibility_guide.md  feature_pipeline.md  normalization_and_provenance.md  overview.md  performance_engine.md  roadmap_and_decisions.md  testing_and_quality.md
docs/references/: bibliography.bib
docs/scientific/: criteria_breakdown.md  edge_cases.md  future_directions.md  interaction_rationale.md  interpretation_guidelines.md  overview.md  reproducibility_and_provenance.md
examples/: protein_interaction_analysis_demo.ipynb
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: perf_regression_check.py  update_lock.sh  update_microbench_baseline.py
src/: cli.py  cli_golden.py  cli_metrics.py
src/analysis/: anion_pi_interactions.py  base.py  base_detector.py  batch_processor.py  cation_pi_interactions.py  ch_pi_interactions.py  chalcogen_bonds.py  columnar.py  feature_store.py  halogen_bonds.py  high_performance_batch.py  hydrogen_bonds.py  hydrophobic_contacts.py  ionic_interactions.py  keys.py  legacy_batch.py  london_dispersion.py  metal_coordination.py  n_pi_star_interactions.py  pi_pi_stacking.py  pnictogen_bonds.py  registry.py  salt_bridges.py  structure_index.py  tetrel_bonds.py  (+2 more)
templates/: scenario_profiles.yaml
tests/: test_angle_utils.py  test_backward_key_compatibility.py  test_command_palette.py  test_config.py  test_parallel_instrumentation.py  test_scenario_profiles.py
(+88 files in other folders)
