[package]
name = "molbridge_geom"
version = "0.1.0"
edition = "2021"

[lib]
name = "molbridge_geom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
num-traits = "0.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
